tests/parsing-test/test_out/if-statement.txt
error: scope item not found
 --> if-statement/root.ctl:1:106
  |
1 | #[entry] ; fn main() -> uint => if 0 == 0 => 0 ; elif 0 == 69 => 89 ; elif 0 == 69 { 89 } ; elif 0 == 69 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 => 89 ; elif 0 == 69 => 89 ; elif 0 == 69 => 89 ; else => 1 ;
  |                                                                                                          ^^ this does not exist or is not imported
  |
  = help: expected Func
  = info: debug: queried 'bool == uint'

info: formatted:
 #[entry]

fn main() -> uint =>
	if 0 == 0 => 0
	elif 0 == 69 => 89
	elif 0 == 69 {
		89
	} elif 0 == 69 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 ==
		0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 ==
		0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 ==
		0 == 0 == 0 == 0 == 0 == 0 == 0 == 0 => 89
	elif 0 == 69 => 89
	elif 0 == 69 => 89
	else => 1

